# bookengine

./: .env.example  .gitignore  CLAUDE.md  README.md
design-system/: MASTER.md
docs/: ACTION_ITEM_PROGRESS_20260316.md  CHECKPOINT_20260318.md  CHECKPOINT_20260319.md  GOOGLE_PLAY_BOOKS_PUBLICATION_GUIDE.md  MANUSCRIPT_DRIFT_RCA_20260315.md  META_BLOCK_SPEC.md  OFFLINE_ASSET_COLLECTION_PROTOCOL.md  PROJECT_REPORT.md  S4_STABILIZATION_PROGRESS_20260316.md  STAGE_AGENT_MAINTENANCE_MAP_20260316.md  VERTEX_MODEL_GATEWAY.md  VERTEX_PROOF_EXECUTION_STRATEGY_20260316.md  WINERROR_10013_ALYAC_FIREWALL_CHECKLIST.md
engine_api/: __init__.py  deps.py  main.py  models.py
engine_core/: __init__.py  ag01_engine.py  ai_client.py  amplifier.py  anchor_injector.py  anchor_scope.py  anchors.py  architecture.py  asset_collection.py  book_state.py  bootstrap.py  common.py  constitution_parser.py  context_packs.py  contracts.py  copyeditor.py  epub_packager.py  gates.py  image_ingestion.py  keyword_generator.py  knowledge_mesh.py  llm_client.py  manuscript_integrity.py  memory.py  meta_blocks.py  metadata_engine.py  model_gateway.py  model_policy.py  orchestration.py  planner.py  postprocess_candidates.py  publication.py  qa_checker.py  references.py  registry.py  research.py  review_pack.py  reviewer.py  rights_review.py  runtime_diagnostics.py  (+16 more)
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+125 files in other folders)
