[package]
name = "book-engine"
version = "0.1.0"
description = "BookEngine — AI Book Pipeline Desktop"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "book_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
